<resources>
    <string name="app_name">AndroidOptionMenu</string>
    <string name="action_settings">Settings</string>


    <string name="action_item1">Item 01</string>
    <string name="action_item2">Item 02</string>
    <string name="action_item3">Item 03</string>
    <string name="action_item4">Item 04</string>

    <string name="action_sub_item01">Sub Item 01</string>
    <string name="action_sub_item02">Sub Item 02</string>

</resources>
