<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tutorialsbuzz.androidoptionmenu.MainActivity">

    <!--<item
        android:id="@+id/action_item_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="search"
        app:showAsAction="always" />-->

    <item
        android:id="@+id/action_item1"
        android:orderInCategory="100"
        android:title="@string/action_item1"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_sub_item01"
                android:orderInCategory="100"
                android:title="@string/action_sub_item01"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sub_item02"
                android:orderInCategory="100"
                android:title="@string/action_sub_item02"
                app:showAsAction="never" />
        </menu>

    </item>


    <item
        android:id="@+id/action_item2"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/action_item2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_item3"
        android:orderInCategory="100"
        android:title="@string/action_item3"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_item4"
        android:orderInCategory="100"
        android:title="@string/action_item4"
        app:showAsAction="never" />


</menu>
